Puppi and dilepton HT Trigger updates

--- a/Analyzers/finalTreesNoTausMiniAOD.ini
+++ b/Analyzers/finalTreesNoTausMiniAOD.ini
@@ -6,5 +6,7 @@ electrons = "<taskname>IsoElectrons"
 muons = "<taskname>IsoMuons"
 #taus = "<taskname>HpsTausAC"
 jets = "<taskname>qualityJets"
+jetsPuppi = "<taskname>qualityJetsPuppi"
 bJets = "<taskname>qualityBJets"
+bJetsPuppi = "<taskname>qualityBJetsPuppi"
 vertices = "<taskname>basicVertices"
