--- a/Input/Master74X_25nsMC_ReMiniAOD.ini
+++ b/Input/Master74X_25nsMC_ReMiniAOD.ini
@@ -7,7 +7,8 @@ localevents = -1
 groups = MC CMSSW74X at13TeV Aachen DrellYan aMCatNLO Spring15 at25ns MiniAODv2
 #from ETH via AN draft
 crosssection = 18610
-negWeightFraction = 0.136
+#~ negWeightFraction = 0.136
+negWeightFraction = 0.165
 datasetpath = /DYJetsToLL_M-10to50_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 localdbspath = /DYJetsToLL_M-10to50_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
@@ -18,8 +19,9 @@ kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen DrellYan aMCatNLO Spring15 at25ns MiniAODv2
 #from ETH via AN draft
-crosssection = 6104
-negWeightFraction = 0.165
+crosssection = 6025
+#~ negWeightFraction = 0.165
+negWeightFraction = 0.136
 datasetpath = /DYJetsToLL_M-50_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 localdbspath = /DYJetsToLL_M-50_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
@@ -33,7 +35,7 @@ kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns MiniAODv2
 #8 TeV xsec scaled by the same factor as > 50 GeV
-crosssection = 0.0
+crosssection = 18610
 negWeightFraction = 0.0
 datasetpath = /DYJetsToLL_M-5to50_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 localdbspath = /DYJetsToLL_M-5to50_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
@@ -160,7 +162,7 @@ kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns MiniAODv2
 #(NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
-crosssection = 0
+crosssection = 49.997
 negWeightFraction = 0.0
 datasetpath = /WWTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 localdbspath = /WWTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
@@ -173,8 +175,9 @@ kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns MiniAODv2
 #(NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
-crosssection = 0.0
-negWeightFraction = 0.0
+crosssection = 4.430
+#~ negWeightFraction = 0.0
+negWeightFraction = 0.15
 datasetpath = /WZTo1L3Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 localdbspath = /WZTo1L3Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
@@ -199,7 +202,8 @@ localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns MiniAODv2
 #(NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
 crosssection = 5.60 
-negWeightFraction = 0.0
+#~ negWeightFraction = 0.0
+negWeightFraction = 0.215
 datasetpath = /WZTo2L2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 localdbspath = /WZTo2L2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
@@ -674,8 +678,8 @@ kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
-crosssection = 0.0
-negWeightFraction = 0.0
+crosssection = 0.4062
+negWeightFraction = 0.25
 datasetpath =  /TTWJetsToQQ_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 localdbspath =  /TTWJetsToQQ_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
@@ -687,8 +691,8 @@ kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
-crosssection = 0.0
-negWeightFraction = 0.0
+crosssection = 0.017
+negWeightFraction = 0.34
 datasetpath =  /TTGJets_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 localdbspath =  /TTGJets_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
@@ -703,7 +707,7 @@ localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.1651
-negWeightFraction = 0.0
+negWeightFraction = 0.055
 datasetpath =  /WWZ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 localdbspath =  /WWZ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
@@ -715,7 +719,7 @@ localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.05565
-negWeightFraction = 0.0
+negWeightFraction = 0.06
 datasetpath =  /WZZ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 localdbspath =  /WZZ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
@@ -727,7 +731,7 @@ localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.01398
-negWeightFraction = 0.0
+negWeightFraction = 0.07
 datasetpath =  /ZZZ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 localdbspath =  /ZZZ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
@@ -738,7 +742,7 @@ kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
-crosssection = 0.0
+crosssection = 0.009103
 negWeightFraction = 0.291
 datasetpath =  /TTTT_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 localdbspath =  /TTTT_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
@@ -801,6 +805,11 @@ datasetpath =
 localdbspath =
 
 [RelValTTbar]
+groups = AOD
+datasetpath = 
+localdbspath =
+
+[SignalTest]
 groups = AOD
 datasetpath = 
 localdbspath =
