--- a/Input/Master74X_25nsMC_Signal.ini
+++ b/Input/Master74X_25nsMC_Signal.ini
@@ -1,27 +1,76 @@
 ####### General signal samples
-[T6bbllslepton_msbottom_400to550_GeV]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Signal aMCatNLO Spring15 at25ns MiniAODv2
-#from ETH via AN draft
-crosssection = 18610
-negWeightFraction = 0.
-datasetpath = /SMS-T6bbllslepton_mSbottom-400To550_mLSP-200To500_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
-localdbspath = /SMS-T6bbllslepton_mSbottom-400To550_mLSP-200To500_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+#~ [T6bbllslepton_msbottom_400to575_GeV]
+#~ status = CREATED
+#~ numevents = -1
+#~ kfactor = 1.
+#~ localevents = -1
+#~ groups = MC CMSSW74X at13TeV Aachen Signal aMCatNLO Spring15 at25ns MiniAODv2
+#~ #from ETH via AN draft
+#~ crosssection = 0.
+#~ negWeightFraction = 0.
+#~ datasetpath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/cschomak-SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_MINIAODSIM-eb69b0448a13fda070ca35fd76ab4e24/USER
+#~ localdbspath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/cschomak-SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_MINIAODSIM-eb69b0448a13fda070ca35fd76ab4e24/USER
 
-[T6bbllslepton_msbottom_600to900_GeV]
+#~ [T6bbllslepton_msbottom_600To775_GeV]
+#~ status = CREATED
+#~ numevents = -1
+#~ kfactor = 1.
+#~ localevents = -1
+#~ groups = MC CMSSW74X at13TeV Aachen Signal aMCatNLO Spring15 at25ns MiniAODv2
+#~ #from ETH via AN draft
+#~ crosssection = 0.
+#~ negWeightFraction = 0.
+#~ datasetpath = /SMS-T6bbllslepton_mSbottom-600To775_mLSP-150To725_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/cschomak-SMS-T6bbllslepton_mSbottom-600To775_mLSP-150To725_MINIAODSIM-eb69b0448a13fda070ca35fd76ab4e24/USER
+#~ localdbspath = /SMS-T6bbllslepton_mSbottom-600To775_mLSP-150To725_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/cschomak-SMS-T6bbllslepton_mSbottom-600To775_mLSP-150To725_MINIAODSIM-eb69b0448a13fda070ca35fd76ab4e24/USER
+#~ 
+#~ [T6bbllslepton_msbottom_800To950_GeV]
+#~ status = CREATED
+#~ numevents = -1
+#~ kfactor = 1.
+#~ localevents = -1
+#~ groups = MC CMSSW74X at13TeV Aachen Signal aMCatNLO Spring15 at25ns MiniAODv2
+#~ #from ETH via AN draft
+#~ crosssection = 0.
+#~ negWeightFraction = 0.
+#~ datasetpath = /SMS-T6bbllslepton_mSbottom-800To950_mLSP-150To900_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/cschomak-SMS-T6bbllslepton_mSbottom-800To950_mLSP-150To900_MINIAODSIM-eb69b0448a13fda070ca35fd76ab4e24/USER
+#~ localdbspath = /SMS-T6bbllslepton_mSbottom-800To950_mLSP-150To900_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/cschomak-SMS-T6bbllslepton_mSbottom-800To950_mLSP-150To900_MINIAODSIM-eb69b0448a13fda070ca35fd76ab4e24/USER
+#~ 
+[T6bbllslepton_msbottom_400To575_GeV]
 status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Signal aMCatNLO Spring15 at25ns MiniAODv2
 #from ETH via AN draft
-crosssection = 18610
+crosssection = 0.
 negWeightFraction = 0.
-datasetpath = /SMS-T6bbllslepton_mSbottom-600To900_mLSP-200To800_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
-localdbspath = /SMS-T6bbllslepton_mSbottom-600To900_mLSP-200To800_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+datasetpath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+
+[T6bbllslepton_msbottom_600To775_GeV]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Signal aMCatNLO Spring15 at25ns MiniAODv2
+#from ETH via AN draft
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /SMS-T6bbllslepton_mSbottom-600To775_mLSP-150To725_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /SMS-T6bbllslepton_mSbottom-600To775_mLSP-150To725_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+
+[T6bbllslepton_msbottom_800To950_GeV]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Signal aMCatNLO Spring15 at25ns MiniAODv2
+#from ETH via AN draft
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /SMS-T6bbllslepton_mSbottom-800To950_mLSP-150To900_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /SMS-T6bbllslepton_mSbottom-800To950_mLSP-150To900_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+
 
 
 
