--- a/Input/Master74X_ReMiniAOD.ini
+++ b/Input/Master74X_ReMiniAOD.ini
@@ -9,16 +9,16 @@ negWeightFraction = 0.
 datasetpath = /DoubleEG/Run2015C_25ns-05Oct2015-v1/MINIAOD
 localdbspath = /DoubleEG/Run2015C_25ns-05Oct2015-v1/MINIAOD
 
-[DoubleElectron_Run2015D_05Oct2015]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = Data CMSSW74X at13TeV Aachen at25ns DoubleElectron Run2015D 
-crosssection = 0.
-negWeightFraction = 0.
-datasetpath = /DoubleEG/Run2015D-05Oct2015-v1/MINIAOD
-localdbspath = /DoubleEG/Run2015D-05Oct2015-v1/MINIAOD
+#~ [DoubleElectron_Run2015D_05Oct2015]
+#~ status = CREATED
+#~ numevents = -1
+#~ kfactor = 1.
+#~ localevents = -1
+#~ groups = Data CMSSW74X at13TeV Aachen at25ns DoubleElectron Run2015D 
+#~ crosssection = 0.
+#~ negWeightFraction = 0.
+#~ datasetpath = /DoubleEG/Run2015D-05Oct2015-v1/MINIAOD
+#~ localdbspath = /DoubleEG/Run2015D-05Oct2015-v1/MINIAOD
 
 [DoubleElectron_Run2015D_PromptRecov4]
 status = CREATED
@@ -42,16 +42,16 @@ negWeightFraction = 0.
 datasetpath = /DoubleMuon/Run2015D-PromptReco-v4/MINIAOD
 localdbspath = /DoubleMuon/Run2015D-PromptReco-v4/MINIAOD
 
-[DoubleMu_Run2015D_05Oct2015]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = Data CMSSW74X at13TeV Aachen at25ns DoubleMu Run2015D Oct05
-crosssection = 0.
-negWeightFraction = 0.
-datasetpath = /DoubleMuon/Run2015D-05Oct2015-v1/MINIAOD
-localdbspath = /DoubleMuon/Run2015D-05Oct2015-v1/MINIAOD
+#~ [DoubleMu_Run2015D_05Oct2015]
+#~ status = CREATED
+#~ numevents = -1
+#~ kfactor = 1.
+#~ localevents = -1
+#~ groups = Data CMSSW74X at13TeV Aachen at25ns DoubleMu Run2015D Oct05
+#~ crosssection = 0.
+#~ negWeightFraction = 0.
+#~ datasetpath = /DoubleMuon/Run2015D-05Oct2015-v1/MINIAOD
+#~ localdbspath = /DoubleMuon/Run2015D-05Oct2015-v1/MINIAOD
 
 [DoubleMu_Run2015C_05Oct2015]
 status = CREATED
@@ -64,16 +64,16 @@ negWeightFraction = 0.
 datasetpath = /DoubleMuon/Run2015C_25ns-05Oct2015-v1/MINIAOD
 localdbspath =/DoubleMuon/Run2015C_25ns-05Oct2015-v1/MINIAOD
 
-[MuEG_Run2015D_05Oct2015]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = Data CMSSW74X at13TeV Aachen at25ns MuEG Run2015D
-crosssection = 0.
-negWeightFraction = 0.
-datasetpath =  /MuonEG/Run2015D-05Oct2015-v2/MINIAOD
-localdbspath = /MuonEG/Run2015D-05Oct2015-v2/MINIAOD
+#~ [MuEG_Run2015D_05Oct2015]
+#~ status = CREATED
+#~ numevents = -1
+#~ kfactor = 1.
+#~ localevents = -1
+#~ groups = Data CMSSW74X at13TeV Aachen at25ns MuEG Run2015D
+#~ crosssection = 0.
+#~ negWeightFraction = 0.
+#~ datasetpath =  /MuonEG/Run2015D-05Oct2015-v2/MINIAOD
+#~ localdbspath = /MuonEG/Run2015D-05Oct2015-v2/MINIAOD
 
 [MuEG_Run2015C_05Oct2015]
 status = CREATED
@@ -96,8 +96,8 @@ crosssection = 0.
 negWeightFraction = 0.
 datasetpath = /MuonEG/Run2015D-PromptReco-v4/MINIAOD
 localdbspath = /MuonEG/Run2015D-PromptReco-v4/MINIAOD
-
-
+#~ 
+#~ 
 [HT_Run2015C_05Oct2015]
 status = CREATED
 numevents = -1
@@ -108,18 +108,18 @@ crosssection = 0.
 negWeightFraction = 0.
 datasetpath = /JetHT/Run2015C_25ns-05Oct2015-v1/MINIAOD
 localdbspath = /JetHT/Run2015C_25ns-05Oct2015-v1/MINIAOD
-
-[HT_Run2015D_05Oct2015]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = Data CMSSW74X at13TeV Aachen at25ns HT Run2015D Oct05
-crosssection = 0.
-negWeightFraction = 0.
-datasetpath = /JetHT/Run2015D-05Oct2015-v1/MINIAOD
-localdbspath = /JetHT/Run2015D-05Oct2015-v1/MINIAOD
-
+#~ 
+#~ [HT_Run2015D_05Oct2015]
+#~ status = CREATED
+#~ numevents = -1
+#~ kfactor = 1.
+#~ localevents = -1
+#~ groups = Data CMSSW74X at13TeV Aachen at25ns HT Run2015D Oct05
+#~ crosssection = 0.
+#~ negWeightFraction = 0.
+#~ datasetpath = /JetHT/Run2015D-05Oct2015-v1/MINIAOD
+#~ localdbspath = /JetHT/Run2015D-05Oct2015-v1/MINIAOD
+#~ 
 [HT_Run2015D_PromptRecov4]
 status = CREATED
 numevents = -1
@@ -230,6 +230,11 @@ negWeightFraction = 0.
 datasetpath = /SingleMuon/Run2015D-PromptReco-v4/MINIAOD
 localdbspath =/SingleMuon/Run2015D-PromptReco-v4/MINIAOD
 
+
+[JetPt]
+groups = AOD
+datasetpath = 
+localdbspath =
 
 [SynchFiles]
 groups = AOD
