--- a/CfgMerge/mergeData2015NonIso.ini
+++ b/CfgMerge/mergeData2015NonIso.ini
@@ -1,8 +1,8 @@
 [general]
 tasks = cutsV29Dilepton
-basePath = /home/jan/Doktorarbeit/Dilepton/cleanTest/
+basePath = /user/schomakers/trees/Cleaning/data
 MCDatasets = .*_Summer12
-outPath = /home/jan/Doktorarbeit/Dilepton/cleanTest/test
+outPath = /user/schomakers/trees/processedTrees/data
 counterSum = True
 
 [dileptonTree:cutsV29Dilepton]
@@ -11,17 +11,20 @@ objects = EE EMu MuMu
 EEDataset = .*DoubleElectron*
 EESelection = HLTDiEleAll
 EEProcessors = CSCHaloFilter overlapHighPt 
-EEFilter = highPtSelector 
+#~ EEFilter = highPtSelector 
+EEFilter = CSCHaloFilter and overlapHighPt
 
 EMuDataset = .*MuEG*
 EMuSelection = HLTMuEGAll
 EMuProcessors = CSCHaloFilter overlapHighPt 
-EMuFilter = highPtSelector 
+#~ EMuFilter = highPtSelector 
+EMuFilter = CSCHaloFilter and overlapHighPt
 
 MuMuDataset = .*DoubleMu*
 MuMuSelection = HLTDiMuAll
 MuMuProcessors = CSCHaloFilter overlapHighPt 
-MuMuFilter = highPtSelector 
+#~ MuMuFilter = highPtSelector 
+MuMuFilter = CSCHaloFilter and overlapHighPt 
 
 OtherSelection = 
 
@@ -35,7 +38,8 @@ MuMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20))
 
 [treeProcessor:CSCHaloFilter]
 type = EventFilter
-names = CfgMerge/DoubleEG_csc2015.txt CfgMerge/DoubleEG_ecalscn1043093.txt CfgMerge/DoubleMuon_csc2015.txt CfgMerge/DoubleMuon_ecalscn1043093.txt CfgMerge/MuonEG_csc2015.txt CfgMerge/MuonEG_ecalscn1043093.txt
+#~ names = CfgMerge/DoubleEG_csc2015.txt CfgMerge/DoubleEG_ecalscn1043093.txt CfgMerge/DoubleMuon_csc2015.txt CfgMerge/DoubleMuon_ecalscn1043093.txt CfgMerge/MuonEG_csc2015.txt CfgMerge/MuonEG_ecalscn1043093.txt
+names = CfgMerge/muonBadTrack.txt CfgMerge/badResolutionTrack.txt CfgMerge/csc2015.txt CfgMerge/ecalscn1043093.txt
 
 [treeProcessor:overlapHighPt]
 type = OverlapRemover
