--- a/Input/25nsData.ini
+++ b/Input/25nsData.ini
@@ -2,11 +2,14 @@
 #additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
 # use below if JEC change. Do not forget to also change MET input-Tags in python config!
 additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer corrJetsProducer metProducerMiniAOD
+#~ additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer corrJetsProducer
+#~ additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer metProducerMiniAOD
 
 [crab]
-lumi_mask = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions15/13TeV/Cert_246908-260627_13TeV_PromptReco_Collisions15_25ns_JSON.txt 
+lumi_mask = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions15/13TeV/Cert_246908-260627_13TeV_PromptReco_Collisions15_25ns_JSON_v2.txt 
 
 
 [74X]
 master_list = <general|InputPath>/Master74X_ReMiniAOD.ini
-globalTag = 74X_dataRun2_Prompt_v2
+#~ globalTag = 74X_dataRun2_Prompt_v2
+globalTag = 74X_dataRun2_v5
