--- a/Input/25nsMC.ini
+++ b/Input/25nsMC.ini
@@ -2,6 +2,7 @@
 #additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
 # use below if JEC change. Do not forget to also change MET input-Tags in python config!
 additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer corrJetsProducerMC metProducerMiniAOD_MC
+#~ additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC metProducerMiniAOD_MC
 
 [crab]
 
