--- a/Input/Master74X_25nsMC_ReMiniAOD.ini
+++ b/Input/Master74X_25nsMC_ReMiniAOD.ini
@@ -4,7 +4,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan aMCatNLO Spring15 at25ns MiniAODv2
+groups = MC CMSSW74X at13TeV Aachen DrellYan aMCatNLO Spring15 at25ns MiniAODv2 CoreMC
 #from ETH via AN draft
 crosssection = 18610
 #~ negWeightFraction = 0.136
@@ -17,7 +17,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan aMCatNLO Spring15 at25ns MiniAODv2
+groups = MC CMSSW74X at13TeV Aachen DrellYan aMCatNLO Spring15 at25ns MiniAODv2 CoreMC
 #from ETH via AN draft
 crosssection = 6025
 #~ negWeightFraction = 0.165
@@ -625,7 +625,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Powheg Spring15 at25ns MiniAODv2
+groups = MC CMSSW74X at13TeV Aachen TT Powheg Spring15 at25ns MiniAODv2 CoreMC
 crosssection = 87.31
 negWeightFraction = 0.0
 datasetpath =   /TTTo2L2Nu_13TeV-powheg/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
@@ -798,6 +798,10 @@ negWeightFraction = 0.
 datasetpath = /VHToNonbb_M125_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM 
 localdbspath = /VHToNonbb_M125_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM  
 
+[MiniAODv2]
+groups = AOD
+datasetpath = 
+localdbspath =
 
 [SynchFiles]
 groups = AOD
