--- a/CfgMerge/mergeData2015.ini
+++ b/CfgMerge/mergeData2015.ini
@@ -1,27 +1,27 @@
 [general]
-tasks = cutsV29Dilepton
-basePath = /user/schomakers/trees/Cleaning
+tasks = cutsV30Dilepton
+basePath = /user/jschulte/Cleaning/
 MCDatasets = .*_Summer12
-outPath = /user/schomakers/trees/processedTrees
+outPath = /user/jschulte/processedTrees
 counterSum = True
 
-[dileptonTree:cutsV29Dilepton]
+[dileptonTree:cutsV30Dilepton]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 EEDataset = .*DoubleElectron*
 EESelection = HLTDiEle
-EEProcessors = overlapHighPt 
-EEFilter = overlapHighPt 
+EEProcessors = CSCHaloFilter overlapHighPt 
+EEFilter = CSCHaloFilter and overlapHighPt 
 
 EMuDataset = .*MuEG*
 EMuSelection = HLTMuEG
-EMuProcessors = overlapHighPt 
-EMuFilter = overlapHighPt 
+EMuProcessors = CSCHaloFilter overlapHighPt 
+EMuFilter = CSCHaloFilter and overlapHighPt 
 
 MuMuDataset = .*DoubleMu*
 MuMuSelection = HLTDiMu
-MuMuProcessors = overlapHighPt 
-MuMuFilter = overlapHighPt 
+MuMuProcessors = CSCHaloFilter overlapHighPt 
+MuMuFilter = CSCHaloFilter and overlapHighPt
 
 OtherSelection = 
 
@@ -29,11 +29,13 @@ OtherSelection =
 #  -> possible only if running over trees with only tight leptons
 [treeProcessor:highPtSelector]
 type = SimpleSelector
-EEExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) 
-EMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20))  
-MuMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) 
+EEExpression = ((pt1 > 5 && pt2 > 5) || (pt1 > 5 && pt2 > 5))
+EMuExpression = ((pt1 > 5 && pt2 > 5) || (pt1 > 5 && pt2 > 5)) 
+MuMuExpression = ((pt1 > 5 && pt2 > 5) || (pt1 > 5 && pt2 > 5))
 
-
+[treeProcessor:CSCHaloFilter]
+type = EventFilter
+names = CfgMerge/DoubleEG_csc2015.txt CfgMerge/DoubleEG_ecalscn1043093.txt CfgMerge/DoubleMuon_csc2015.txt CfgMerge/DoubleMuon_ecalscn1043093.txt CfgMerge/MuonEG_csc2015.txt CfgMerge/MuonEG_ecalscn1043093.txt
 
 [treeProcessor:overlapHighPt]
 type = OverlapRemover
