--- a/CfgMerge/mergeSimulationMiniAOD.ini
+++ b/CfgMerge/mergeSimulationMiniAOD.ini
@@ -1,26 +1,26 @@
 [general]
-tasks = cutsV27DileptonMiniAODSystematics
-basePath = /user/schomakers/trees/Cleaning/SystematicTrees
+tasks = cutsV30Dilepton
+basePath = /user/jschulte/CleaningMC
 MCDatasets = .*
 counterSum = True
-outPath = processedTrees/SystematicTrees/
+outPath = /user/jschulte/processedTrees
 
-[dileptonTree:cutsV29Dilepton]
+[dileptonTree:cutsV30Dilepton]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 
 EEDataset = .*
-EESelection = 
+EESelection = HLTDiEle
 EEProcessors = overlapHighPt
 EEFilter = overlapHighPt
 
 EMuDataset = .*
-EMuSelection = 
+EMuSelection = HLTMuEG
 EMuProcessors = overlapHighPt
 EMuFilter = overlapHighPt
 
 MuMuDataset = .*
-MuMuSelection = 
+MuMuSelection = HLTDiMu
 MuMuProcessors = overlapHighPt
 MuMuFilter = overlapHighPt
 
@@ -30,9 +30,9 @@ OtherSelection =
 #  -> possible only if running over trees with only tight leptons
 [treeProcessor:highPtSelector]
 type = SimpleSelector
-EEExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) 
-EMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) 
-MuMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) 
+EEExpression = ((pt1 > 5 && pt2 > 5) || (pt1 > 5 && pt2 > 5)) 
+EMuExpression = ((pt1 > 5 && pt2 > 5) || (pt1 > 5 && pt2 > 5)) 
+MuMuExpression = ((pt1 > 5 && pt2 > 5) || (pt1 > 5 && pt2 > 5)) 
 
 
 
