Updates for 76X and 80X

--- a/Analyzers/finalTreesNoTausMiniAOD.ini
+++ b/Analyzers/finalTreesNoTausMiniAOD.ini
@@ -4,9 +4,10 @@ path = SuSyAachen.DiLeptonHistograms.DiLeptonTreesFromMiniAOD_cfi
 module = DiLeptonTreesFromMiniAODNoTaus
 electrons = "<taskname>IsoElectrons"
 muons = "<taskname>IsoMuons"
+looseElectrons = "<taskname>LooseElectrons"
+looseMuons = "<taskname>LooseMuons"
 #taus = "<taskname>HpsTausAC"
 jets = "<taskname>qualityJets"
-jetsPuppi = "<taskname>qualityJetsPuppi"
 bJets = "<taskname>qualityBJets"
-bJetsPuppi = "<taskname>qualityBJetsPuppi"
+bJets35 = "<taskname>qualityBJets35"
 vertices = "<taskname>basicVertices"
