--- a/Input/25nsMC_76X.ini
+++ b/Input/25nsMC_76X.ini
@@ -2,14 +2,13 @@
 #additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
 # use below if JEC change. Do not forget to also change MET input-Tags in python config!
 #~ additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer corrJetsProducerMC metProducerMiniAOD_MC
-additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer corrJetsProducerMC metProducerMiniAOD_MC
-#~ additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer jetMetProducerMC
+additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer jetMetProducerMC
 #~ additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC metProducerMiniAOD_MC
 
 [crab]
 
 
 
-[74X]
-master_list = <general|InputPath>/Master74X_25nsMC_ReMiniAOD.ini
-globalTag = 74X_mcRun2_asymptotic_v5
+[76X]
+master_list = <general|InputPath>/Master76X_MC.ini
+globalTag = 76X_mcRun2_asymptotic_v12
