--- a/Input/25nsMC_80X.ini
+++ b/Input/25nsMC_80X.ini
@@ -1,8 +1,8 @@
 [general]
 #additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
 # use below if JEC change. Do not forget to also change MET input-Tags in python config!
-#~ additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer corrJetsProducerMC metProducerMiniAOD_MC
 additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer corrJetsProducerMC metProducerMiniAOD_MC
+#~ additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
 #~ additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer jetMetProducerMC
 #~ additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC metProducerMiniAOD_MC
 
@@ -10,6 +10,6 @@ additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProd
 
 
 
-[74X]
-master_list = <general|InputPath>/Master74X_25nsMC_ReMiniAOD.ini
-globalTag = 74X_mcRun2_asymptotic_v5
+[80X]
+master_list = <general|InputPath>/Master80X_MC.ini
+globalTag = 80X_mcRun2_asymptotic_2016_miniAODv2
