--- a/Input/25nsMC_Signal_80X.ini
+++ b/Input/25nsMC_Signal_80X.ini
@@ -2,7 +2,8 @@
 #additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
 # use below if JEC change. Do not forget to also change MET input-Tags in python config!
 #~ additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer corrJetsProducerMC metProducerMiniAOD_MC
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC metProducerMiniAOD_MC_Signal
+#~ additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC metProducerMiniAOD_MC_Signal
+additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC metProducerMiniAOD_MC
 #~ additionalProducers = EventCountProducer electronMVAProducer jetMetProducerMCSignal
 #~ additionalProducers = EventCountProducer 
 
@@ -10,7 +11,7 @@ additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC 
 
 
 
-[74X]
-master_list = <general|InputPath>/Master74X_25nsMC_Signal.ini
-globalTag = MCRUN2_74_V9
+[80X]
+master_list = <general|InputPath>/Master80X_MC_Signal.ini
+globalTag = 80X_mcRun2_asymptotic_2016_miniAODv2
 #~ inputDBS = phys03
