--- a/Input/Master74X_25nsMC_ReMiniAOD.ini
+++ b/Input/Master74X_25nsMC_ReMiniAOD.ini
@@ -27,7 +27,6 @@ localdbspath = /DYJetsToLL_M-50_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpr
 
 ##### Drell--Yan Madgraph
 
-
 [AStar_Madgraph_Spring15_25ns]
 status = CREATED
 numevents = -1
@@ -608,17 +607,17 @@ datasetpath =  /TT_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15MiniAODv2-74
 localdbspath = /TT_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
 #### Powheg ttbar 
-
-[TT_Powheg_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Powheg Spring15 at25ns MiniAODv2
-crosssection = 831.76
-negWeightFraction = 0.0
-datasetpath =  /TT_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
-localdbspath =  /TT_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+#~ 
+#~ [TT_Powheg_Spring15_25ns]
+#~ status = CREATED
+#~ numevents = -1
+#~ kfactor = 1.
+#~ localevents = -1
+#~ groups = MC CMSSW74X at13TeV Aachen TT Powheg Spring15 at25ns MiniAODv2
+#~ crosssection = 831.76
+#~ negWeightFraction = 0.0
+#~ datasetpath =  /TT_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+#~ localdbspath =  /TT_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
 [TT_Dilepton_Powheg_Spring15_25ns]
 status = CREATED
@@ -797,6 +796,72 @@ crosssection = 0.952
 negWeightFraction = 0.
 datasetpath = /VHToNonbb_M125_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM 
 localdbspath = /VHToNonbb_M125_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM  
+
+### Signal
+
+[T6bbllslepton_msbottom_500_mneutralino_250]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Signal aMCatNLO Spring15 at25ns MiniAODv2
+#from ETH via AN draft
+crosssection = 0.5185
+negWeightFraction = 0.
+datasetpath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+
+
+[T6bbllslepton_msbottom_550_mneutralino_175]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Signal aMCatNLO Spring15 at25ns MiniAODv2
+#from ETH via AN draft
+crosssection = 0.2961
+negWeightFraction = 0.
+datasetpath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+
+
+[T6bbllslepton_msbottom_550_mneutralino_200]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Signal aMCatNLO Spring15 at25ns MiniAODv2
+#from ETH via AN draft
+crosssection = 0.2961
+negWeightFraction = 0.
+datasetpath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+
+[T6bbllslepton_msbottom_550_mneutralino_225]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Signal aMCatNLO Spring15 at25ns MiniAODv2
+#from ETH via AN draft
+crosssection = 0.2961
+negWeightFraction = 0.
+datasetpath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+
+
+[T6bbllslepton_msbottom_550_mneutralino_250]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Signal aMCatNLO Spring15 at25ns MiniAODv2
+#from ETH via AN draft
+crosssection = 0.2961
+negWeightFraction = 0.
+datasetpath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-FastAsympt25ns_74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+
 
 
 [SynchFiles]
