--- a/Input/default74X.ini
+++ b/Input/default74X.ini
@@ -1,6 +1,6 @@
 [general]
 InputPath = Input/
-OutputPath = /user/schomakers/AnalysisData/
+OutputPath = /disk1/user/schomakers/AnalysisData/
 LocalOutputPath = /user/jschulte/jobOutput/624Test
 SiteOutputPath = /pnfs/physik.rwth-aachen.de/cms/store/user
 SitePath = /store/user
@@ -34,8 +34,8 @@ groups = StandardModel SUSY
 StageoutSite = T2_DE_RWTH
 #~ CrabServer = Cern
 total_number_of_lumis = -1
-lumis_per_job = 100
-events_per_job = 4
+lumis_per_job = 50
+events_per_job = 2
 lumi_mask = ""
 # lumi recovery / skimming
 #CMSSW.lumis_per_job = 20
@@ -54,7 +54,7 @@ additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/MCRUN2_74_V9.db",
 #CMSSW.lumi_mask = /home/home4/institut_1b/jschulte/Doktorarbeit/Dilepton/SubmitScripts/Input/Cert_190456-196531_8TeV_13Jul2012ReReco_Collisions12_JSON.txt
 
 # for normal running
-nEventsPerJob = 50000
+nEventsPerJob = 20000
 #nEventsPerJob = 50000
 # for weightSummer
 #nEventsPerJob = 2000000
@@ -82,7 +82,7 @@ nEventsPerJob = 50000
 [74X]
 makeMETUncertainties = False
 monteCarloAvailable = True
-localdatapath = /user/$USER/LocalInput
+localdatapath = /disk1/user/$USER/LocalInput
 #~ globalTag =  START71_V7::All
 #~ globalTag =  PRE_LS172_V15::All
 globalTag =  74X_dataRun2_Prompt_v2
