Updates for 80X signal and 2016 data taking

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ EdgeFitter/shelves/*
 DataMC/shelves/*
 DataMC/tab/*
 TriggerEfficiencies/shelves/*
+CfgMerge/mergeSystematics/mergeSimulationMiniAOD*
