--- a/Input/25nsMC_Signal.ini
+++ b/Input/25nsMC_Signal.ini
@@ -13,4 +13,4 @@ additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC 
 [74X]
 master_list = <general|InputPath>/Master74X_25nsMC_Signal.ini
 globalTag = MCRUN2_74_V9
-#~ inputDBS = phys03
+inputDBS = phys03
