--- a/Input/Master80X.ini
+++ b/Input/Master80X.ini
@@ -9,6 +9,28 @@ negWeightFraction = 0.
 datasetpath = /DoubleEG/Run2016B-PromptReco-v2/MINIAOD
 localdbspath = /DoubleEG/Run2016B-PromptReco-v2/MINIAOD
 
+[DoubleElectron_Run2016C]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns DoubleElectron Run2016C
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /DoubleEG/Run2016C-PromptReco-v2/MINIAOD
+localdbspath = /DoubleEG/Run2016C-PromptReco-v2/MINIAOD
+
+[DoubleElectron_Run2016D]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns DoubleElectron Run2016D
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /DoubleEG/Run2016D-PromptReco-v2/MINIAOD
+localdbspath = /DoubleEG/Run2016D-PromptReco-v2/MINIAOD
+
 [DoubleMu_Run2016B]
 status = CREATED
 numevents = -1
@@ -19,6 +41,28 @@ crosssection = 0.
 negWeightFraction = 0.
 datasetpath = /DoubleMuon/Run2016B-PromptReco-v2/MINIAOD
 localdbspath = /DoubleMuon/Run2016B-PromptReco-v2/MINIAOD
+
+[DoubleMu_Run2016C]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns DoubleMu Run2016C
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /DoubleMuon/Run2016C-PromptReco-v2/MINIAOD
+localdbspath = /DoubleMuon/Run2016C-PromptReco-v2/MINIAOD
+
+[DoubleMu_Run2016D]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns DoubleMu Run2016D
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /DoubleMuon/Run2016D-PromptReco-v2/MINIAOD
+localdbspath = /DoubleMuon/Run2016D-PromptReco-v2/MINIAOD
 
 
 [MuEG_Run2016B]
@@ -32,6 +76,28 @@ negWeightFraction = 0.
 datasetpath =  /MuonEG/Run2016B-PromptReco-v2/MINIAOD
 localdbspath = /MuonEG/Run2016B-PromptReco-v2/MINIAOD
 
+[MuEG_Run2016C]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns MuEG Run2016C
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath =  /MuonEG/Run2016C-PromptReco-v2/MINIAOD
+localdbspath = /MuonEG/Run2016C-PromptReco-v2/MINIAOD
+
+[MuEG_Run2016D]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns MuEG Run2016D
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath =  /MuonEG/Run2016D-PromptReco-v2/MINIAOD
+localdbspath = /MuonEG/Run2016D-PromptReco-v2/MINIAOD
+
 
 [HT_Run2016B]
 status = CREATED
@@ -43,9 +109,36 @@ crosssection = 0.
 negWeightFraction = 0.
 datasetpath = /JetHT/Run2016B-PromptReco-v2/MINIAOD
 localdbspath = /JetHT/Run2016B-PromptReco-v2/MINIAOD
+
+[HT_Run2016C]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns HT Run2016C
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /JetHT/Run2016C-PromptReco-v2/MINIAOD
+localdbspath = /JetHT/Run2016C-PromptReco-v2/MINIAOD
+
+[HT_Run2016D]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns HT Run2016D
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /JetHT/Run2016D-PromptReco-v2/MINIAOD
+localdbspath = /JetHT/Run2016D-PromptReco-v2/MINIAOD
  
 
 [SynchFiles]
+groups = AOD
+datasetpath = 
+localdbspath =
+
+[80XSynch]
 groups = AOD
 datasetpath = 
 localdbspath =
@@ -56,6 +149,19 @@ datasetpath =
 localdbspath =
 
 [RelValTTbar]
+groups = AOD
+datasetpath = 
+localdbspath =
+
+[ReRecoEE]
+groups = AOD
+datasetpath = 
+localdbspath =
+[ReRecoEMu]
+groups = AOD
+datasetpath = 
+localdbspath =
+[ReRecoMuMu]
 groups = AOD
 datasetpath = 
 localdbspath =
