--- a/Input/Master80X_MC_Signal.ini
+++ b/Input/Master80X_MC_Signal.ini
@@ -1,5 +1,29 @@
 ####### General signal samples
-[T6bbllslepton_msbottom]
+[T6bbllslepton_msbottom_400to575_GeV]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW80X at13TeV Aachen Signal aMCatNLO Spring16 at25ns MiniAODv2
+#from ETH via AN draft
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring16MiniAODv2-pLHE_PUSpring16Fast_80X_mcRun2_asymptotic_2016_miniAODv2_v0-v1/MINIAODSIM
+localdbspath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring16MiniAODv2-pLHE_PUSpring16Fast_80X_mcRun2_asymptotic_2016_miniAODv2_v0-v1/MINIAODSIM
+
+[T6bbllslepton_msbottom_600To775_GeV]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW80X at13TeV Aachen Signal aMCatNLO Spring16 at25ns MiniAODv2
+#from ETH via AN draft
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /SMS-T6bbllslepton_mSbottom-600To775_mLSP-150To725_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring16MiniAODv2-pLHE_PUSpring16Fast_80X_mcRun2_asymptotic_2016_miniAODv2_v0-v1/MINIAODSIM
+localdbspath = /SMS-T6bbllslepton_mSbottom-600To775_mLSP-150To725_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring16MiniAODv2-pLHE_PUSpring16Fast_80X_mcRun2_asymptotic_2016_miniAODv2_v0-v1/MINIAODSIM
+
+[T6bbllslepton_msbottom_800To950_GeV]
 status = CREATED
 numevents = -1
 kfactor = 1.
@@ -24,6 +48,11 @@ datasetpath =
 localdbspath =
 
 [SignalTest]
+groups = AOD
+datasetpath = 
+localdbspath =
+
+[SignalTest2]
 groups = AOD
 datasetpath = 
 localdbspath =
