--- a/Analyzers/signalNominatorTrees.ini
+++ b/Analyzers/signalNominatorTrees.ini
@@ -2,3 +2,7 @@
 type = GenericAnalyzer
 path = SuSyAachen.DiLeptonHistograms.signalNominatorTrees_cfi
 module = signalNominatorTrees
+electrons = "<taskname>IsoElectrons"
+muons = "<taskname>IsoMuons"
+jets = "<taskname>qualityJets"
+vertices = "<taskname>basicVertices"
