--- a/Input/25nsData_80X.ini
+++ b/Input/25nsData_80X.ini
@@ -7,10 +7,11 @@ additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProd
 #~ additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer metProducerMiniAOD
 
 [crab]
-lumi_mask = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions16/13TeV/Cert_271036-275125_13TeV_PromptReco_Collisions16_JSON.txt 
+#~ lumi_mask = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions16/13TeV/Cert_271036-275783_13TeV_PromptReco_Collisions16_JSON.txt
+lumi_mask = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions16/13TeV/Cert_271036-276811_13TeV_PromptReco_Collisions16_JSON_NoL1T.txt
 
 
 [80X]
 master_list = <general|InputPath>/Master80X.ini
 #~ globalTag = 74X_dataRun2_Prompt_v2
-globalTag = 80X_dataRun2_v14
+globalTag = 80X_dataRun2_Prompt_ICHEP16JEC_v0
