--- a/Input/Master80X_MC.ini
+++ b/Input/Master80X_MC.ini
@@ -466,16 +466,16 @@ localdbspath =  /TTJets_SingleLeptFromTbar_TuneCUETP8M1_13TeV-madgraphMLM-pythia
 
 
 
-#~ [TTJets_Madgraph_MLM_Spring15_25ns]
-#~ status = CREATED
-#~ numevents = -1
-#~ kfactor = 1.
-#~ localevents = -1
-#~ groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at25ns MiniAODv2
-#~ crosssection = 831.76
-#~ negWeightFraction = 0.0
-#~ datasetpath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
-#~ localdbspath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+[TTJets_Madgraph_MLM_Spring16_25ns]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW80X at13TeV Aachen TT Madgraph Spring16 at25ns MiniAODv2
+crosssection = 831.76
+negWeightFraction = 0.0
+datasetpath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring16MiniAODv2-PUSpring16_80X_mcRun2_asymptotic_2016_miniAODv2_v0-v1/MINIAODSIM
+localdbspath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring16MiniAODv2-PUSpring16_80X_mcRun2_asymptotic_2016_miniAODv2_v0-v1/MINIAODSIM
 
 
 #~ [TTJets_aMCatNLO_FXFX_Spring15_25ns]
