--- a/Input/default80X.ini
+++ b/Input/default80X.ini
@@ -26,15 +26,15 @@ groups = StandardModel SUSY
        TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ DrellYan Signal
        at13TeV at25ns noPU
        SingleElectron DoubleElectron SingleMuon DoubleMu ElectronHad MuHad HT TauPlusX MuEG MET HTMHT 
-       Data MC AOD RelVal MiniAODv2
-       Run2016B
+       Data MC AOD RelVal MiniAODv2 ReReco
+       Run2016B Run2016C Run2016D
 
 [crab]
 StageoutSite = T2_DE_RWTH
 #~ CrabServer = Cern
 total_number_of_lumis = -1
-lumis_per_job = 80
-events_per_job = 3
+lumis_per_job = 150
+events_per_job = 10
 lumi_mask = ""
 # lumi recovery / skimming
 #CMSSW.lumis_per_job = 20
@@ -42,7 +42,7 @@ lumi_mask = ""
 publish = False
 pubDBSURL = phys03
 # all (merged)
-additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/CSVv2.csv","/afs/cern.ch/user/c/cschomak/public/CSV_13TEV_Combined_20_11_2015.csv","/afs/cern.ch/user/c/cschomak/public/Spring16_25nsV3_MC.db","/afs/cern.ch/user/c/cschomak/public/Spring16_25nsV3_DATA.db"]
+additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/CSVv2_ichep.csv","/afs/cern.ch/user/c/cschomak/public/CSV_13TEV_Combined_14_7_2016.csv","/afs/cern.ch/user/c/cschomak/public/Spring16_25nsV6_MC.db","/afs/cern.ch/user/c/cschomak/public/Spring16_25nsV6_DATA.db","/afs/cern.ch/user/c/cschomak/public/Spring16_25nsFastSimMC_V1.db"]
 
 # first json
 
