Post ICHEP updates for 2016 data taking

--- a/Analyzers/signalNominatorTrees.ini
+++ b/Analyzers/signalNominatorTrees.ini
@@ -2,7 +2,7 @@
 type = GenericAnalyzer
 path = SuSyAachen.DiLeptonHistograms.signalNominatorTrees_cfi
 module = signalNominatorTrees
-electrons = "<taskname>IsoElectrons"
-muons = "<taskname>IsoMuons"
-jets = "<taskname>qualityJets"
-vertices = "<taskname>basicVertices"
+#~ electrons = "<taskname>IsoElectrons"
+#~ muons = "<taskname>IsoMuons"
+#~ jets = "<taskname>qualityJets"
+#~ vertices = "<taskname>basicVertices"
