--- a/CfgMerge/mergeSimulationMiniAODNonIsoTrigger.ini
+++ b/CfgMerge/mergeSimulationMiniAODNonIsoTrigger.ini
@@ -1,12 +1,12 @@
 [general]
-tasks = cutsV30Dilepton
-basePath = /user/schomakers/trees/Cleaning/MC
-MCDatasets = .*
+tasks = cutsV31Dilepton
+basePath = /disk1/user/schomakers/trees/Cleaning/MC_2
+MCDatasets = .*_Spring15
 counterSum = True
-outPath = /user/schomakers/trees/processedTrees/MC
+outPath = /disk1/user/schomakers/trees/processedTrees/MC
 
 
-[dileptonTree:cutsV30Dilepton]
+[dileptonTree:cutsV31Dilepton]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 
