--- a/CfgMerge/mergeData2016HT.ini
+++ b/CfgMerge/mergeData2016HT.ini
@@ -1,25 +1,25 @@
 [general]
-tasks = cutsV33Dilepton
-basePath = /disk1/user/schomakers/trees/Cleaning/data_80X
+tasks = cutsV33DileptonTriggerPFHT
+basePath = /disk1/user/schomakers/trees/Cleaning/data_HT
 MCDatasets = .*_Summer12
-outPath = /disk1/user/schomakers/trees/processedTrees/data_80X
+outPath = /disk1/user/schomakers/trees/processedTrees/data_HT
 counterSum = True
 
-[dileptonTree:cutsV33Dilepton]
+[dileptonTree:cutsV33DileptonTriggerPFHT]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
-EEDataset = .*DoubleElectron*
+EEDataset = .*TriggerPFHT*
 EESelection = HLTDiEleAll
 EEProcessors = overlapHighPt 
 EEFilter = overlapHighPt
 
-EMuDataset = .*MuEG*
+EMuDataset = .*TriggerPFHT*
 EMuSelection = HLTMuEGAll
 EMuProcessors = overlapHighPt 
-EMuFilter =  overlapHighPt
+EMuFilter = overlapHighPt
 
-MuMuDataset = .*DoubleMu*
-MuMuSelection = HLTDiMuAll 
+MuMuDataset = .*TriggerPFHT*
+MuMuSelection = HLTDiMuAll
 MuMuProcessors = overlapHighPt 
 MuMuFilter = overlapHighPt 
 
@@ -29,9 +29,9 @@ OtherSelection =
 #  -> possible only if running over trees with only tight leptons
 [treeProcessor:highPtSelector]
 type = SimpleSelector
-EEExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1 
-EMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.2
-MuMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) && miniIsoEffArea1 < 0.2 && miniIsoEffArea2 < 0.2
+EEExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1
+EMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20))  && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1
+MuMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1
 
 [treeProcessor:CSCHaloFilter]
 type = EventFilter
