--- a/CfgMerge/mergeData2016InclusiveRunC.ini
+++ b/CfgMerge/mergeData2016InclusiveRunC.ini
@@ -1,24 +1,24 @@
 [general]
 tasks = cutsV33Dilepton
-basePath = /disk1/user/schomakers/trees/Cleaning/data_80X
+basePath = /disk1/user/schomakers/trees/Cleaning/data_80X_RunC
 MCDatasets = .*_Summer12
-outPath = /disk1/user/schomakers/trees/processedTrees/data_80X
+outPath = /disk1/user/schomakers/trees/processedTrees/data_80X_Run2016C
 counterSum = True
 
 [dileptonTree:cutsV33Dilepton]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
-EEDataset = .*DoubleElectron*
+EEDataset = .*DoubleElectron_Run2016C*
 EESelection = HLTDiEleAll
 EEProcessors = overlapHighPt 
 EEFilter = overlapHighPt
 
-EMuDataset = .*MuEG*
+EMuDataset = .*MuEG_Run2016C*
 EMuSelection = HLTMuEGAll
 EMuProcessors = overlapHighPt 
 EMuFilter =  overlapHighPt
 
-MuMuDataset = .*DoubleMu*
+MuMuDataset = .*DoubleMu_Run2016C*
 MuMuSelection = HLTDiMuAll 
 MuMuProcessors = overlapHighPt 
 MuMuFilter = overlapHighPt 
