--- a/Input/Master80X.ini
+++ b/Input/Master80X.ini
@@ -31,6 +31,39 @@ negWeightFraction = 0.
 datasetpath = /DoubleEG/Run2016D-PromptReco-v2/MINIAOD
 localdbspath = /DoubleEG/Run2016D-PromptReco-v2/MINIAOD
 
+[DoubleElectron_Run2016E]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns DoubleElectron Run2016E
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /DoubleEG/Run2016E-PromptReco-v2/MINIAOD
+localdbspath = /DoubleEG/Run2016E-PromptReco-v2/MINIAOD
+
+[DoubleElectron_Run2016F]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns DoubleElectron Run2016F
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /DoubleEG/Run2016F-PromptReco-v1/MINIAOD
+localdbspath = /DoubleEG/Run2016F-PromptReco-v1/MINIAOD
+
+[DoubleElectron_Run2016G]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns DoubleElectron Run2016G
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /DoubleEG/Run2016G-PromptReco-v1/MINIAOD
+localdbspath = /DoubleEG/Run2016G-PromptReco-v1/MINIAOD
+
 [DoubleMu_Run2016B]
 status = CREATED
 numevents = -1
@@ -63,6 +96,39 @@ crosssection = 0.
 negWeightFraction = 0.
 datasetpath = /DoubleMuon/Run2016D-PromptReco-v2/MINIAOD
 localdbspath = /DoubleMuon/Run2016D-PromptReco-v2/MINIAOD
+
+[DoubleMu_Run2016E]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns DoubleMu Run2016E
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /DoubleMuon/Run2016E-PromptReco-v2/MINIAOD
+localdbspath = /DoubleMuon/Run2016E-PromptReco-v2/MINIAOD
+
+[DoubleMu_Run2016F]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns DoubleMu Run2016F
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /DoubleMuon/Run2016F-PromptReco-v1/MINIAOD
+localdbspath = /DoubleMuon/Run2016F-PromptReco-v1/MINIAOD
+
+[DoubleMu_Run2016G]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns DoubleMu Run2016G
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /DoubleMuon/Run2016G-PromptReco-v1/MINIAOD
+localdbspath = /DoubleMuon/Run2016G-PromptReco-v1/MINIAOD
 
 
 [MuEG_Run2016B]
@@ -98,6 +164,39 @@ negWeightFraction = 0.
 datasetpath =  /MuonEG/Run2016D-PromptReco-v2/MINIAOD
 localdbspath = /MuonEG/Run2016D-PromptReco-v2/MINIAOD
 
+[MuEG_Run2016E]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns MuEG Run2016E
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath =  /MuonEG/Run2016E-PromptReco-v2/MINIAOD
+localdbspath = /MuonEG/Run2016E-PromptReco-v2/MINIAOD
+
+[MuEG_Run2016F]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns MuEG Run2016F
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath =  /MuonEG/Run2016F-PromptReco-v1/MINIAOD
+localdbspath = /MuonEG/Run2016F-PromptReco-v1/MINIAOD
+
+[MuEG_Run2016G]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns MuEG Run2016G
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath =  /MuonEG/Run2016G-PromptReco-v1/MINIAOD
+localdbspath = /MuonEG/Run2016G-PromptReco-v1/MINIAOD
+
 
 [HT_Run2016B]
 status = CREATED
@@ -131,6 +230,106 @@ crosssection = 0.
 negWeightFraction = 0.
 datasetpath = /JetHT/Run2016D-PromptReco-v2/MINIAOD
 localdbspath = /JetHT/Run2016D-PromptReco-v2/MINIAOD
+
+[HT_Run2016E]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns HT Run2016E
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /JetHT/Run2016E-PromptReco-v2/MINIAOD
+localdbspath = /JetHT/Run2016E-PromptReco-v2/MINIAOD
+
+[HT_Run2016F]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns HT Run2016F
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /JetHT/Run2016F-PromptReco-v1/MINIAOD
+localdbspath = /JetHT/Run2016F-PromptReco-v1/MINIAOD
+
+[HT_Run2016G]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns HT Run2016G
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /JetHT/Run2016G-PromptReco-v1/MINIAOD
+localdbspath = /JetHT/Run2016G-PromptReco-v1/MINIAOD
+
+
+[MET_Run2016B]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns MET Run2016B
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /MET/Run2016B-PromptReco-v2/MINIAOD
+localdbspath = /MET/Run2016B-PromptReco-v2/MINIAOD
+
+[MET_Run2016C]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns MET Run2016C
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /MET/Run2016C-PromptReco-v2/MINIAOD
+localdbspath = /MET/Run2016C-PromptReco-v2/MINIAOD
+
+[MET_Run2016D]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns MET Run2016D
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /MET/Run2016D-PromptReco-v2/MINIAOD
+localdbspath = /MET/Run2016D-PromptReco-v2/MINIAOD
+
+[MET_Run2016E]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns MET Run2016E
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /MET/Run2016E-PromptReco-v2/MINIAOD
+localdbspath = /MET/Run2016E-PromptReco-v2/MINIAOD
+
+[MET_Run2016F]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns MET Run2016F
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /MET/Run2016F-PromptReco-v1/MINIAOD
+localdbspath = /MET/Run2016F-PromptReco-v1/MINIAOD
+
+[MET_Run2016G]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW80X at13TeV Aachen at25ns MET Run2016G
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /MET/Run2016G-PromptReco-v1/MINIAOD
+localdbspath = /MET/Run2016G-PromptReco-v1/MINIAOD
  
 
 [SynchFiles]
