--- a/Input/default80X.ini
+++ b/Input/default80X.ini
@@ -27,13 +27,13 @@ groups = StandardModel SUSY
        at13TeV at25ns noPU
        SingleElectron DoubleElectron SingleMuon DoubleMu ElectronHad MuHad HT TauPlusX MuEG MET HTMHT 
        Data MC AOD RelVal MiniAODv2 ReReco
-       Run2016B Run2016C Run2016D
+       Run2016B Run2016C Run2016D Run2016E Run2016F Run2016G
 
 [crab]
 StageoutSite = T2_DE_RWTH
 #~ CrabServer = Cern
 total_number_of_lumis = -1
-lumis_per_job = 150
+lumis_per_job = 200
 events_per_job = 10
 lumi_mask = ""
 # lumi recovery / skimming
