Example signal added to the MC master list to be used in DataMC plots

--- a/Input/Master80X_MC.ini
+++ b/Input/Master80X_MC.ini
@@ -691,6 +691,13 @@ negWeightFraction = 0.
 datasetpath = /VHToNonbb_M125_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring16MiniAODv2-PUSpring16_80X_mcRun2_asymptotic_2016_miniAODv2_v0-v1/MINIAODSIM
 localdbspath = /VHToNonbb_M125_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring16MiniAODv2-PUSpring16_80X_mcRun2_asymptotic_2016_miniAODv2_v0-v1/MINIAODSIM  
 
+### Signal
+
+[T6bbllslepton_msbottom_550_mneutralino_175]
+crosssection = 0.2961
+negWeightFraction = 0.
+datasetpath = /SMS-T6bbllslepton_mSbottom-400To575_mLSP-150To550_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring16MiniAODv2-pLHE_PUSpring16Fast_80X_mcRun2_asymptotic_2016_miniAODv2_v0-v1/MINIAODSIM
+
 
 [SynchFiles]
 groups = AOD
