--- a/Input/default80X.ini
+++ b/Input/default80X.ini
@@ -1,6 +1,6 @@
 [general]
 InputPath = Input/
-OutputPath = /disk1/user/schomakers/AnalysisData/
+OutputPath = /user/teroerde/AnalysisData/
 LocalOutputPath = /user/jschulte/jobOutput/624Test
 SiteOutputPath = /pnfs/physik.rwth-aachen.de/cms/store/user
 SitePath = /store/user
@@ -57,7 +57,7 @@ nEventsPerJob = 20000
 [80X]
 makeMETUncertainties = False
 monteCarloAvailable = True
-localdatapath = /disk1/user/$USER/LocalInput
+localdatapath = /user/$USER/LocalInput
 #~ globalTag =  START71_V7::All
 #~ globalTag =  PRE_LS172_V15::All
 globalTag =  80X_dataRun2_v14
@@ -78,9 +78,9 @@ analogpath = <general|OutputPath>/LOG/analysis
 #~ dbsurl = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
 #~ inputDBS = phys03
 inputDBS = global
-storagepath = <general|SitePath>/cschomak
-histogramstoragepath = <general|SitePath>/cschomak/data/Histos
-histogramoutputpath = <general|SiteOutputPath>/cschomak/data/Histos
+storagepath = <general|SitePath>/mteroerd
+histogramstoragepath = <general|SitePath>/mteroerd/data/Histos
+histogramoutputpath = <general|SiteOutputPath>/mteroerd/data/Histos
 cmsstoragepath = <general|SitePath>
 famospath = /home/home4/institut_1b/nmohr/famos/223
 famosdatapath = <general|SitePath>
